# neural_splines

./: CMakeLists.txt  README.md  manifest.in  pyproject.toml  setup.py  setup.sh
docs/: nueral_splines.tex
neural_splines/: __init__.py  api.py  cli.py  convert.py  exceptions.py  visualization.py
neural_splines/compression/: __init__.py  adaptive.py  optimizer.py
neural_splines/core/: __init__.py  converter.py  dense_to_neural_spline.py  harmonic.py  inference.py  interpolation.py  manifold.py  neural_spline.py  train.py  validation.py
neural_splines/models/: __init__.py  base_neural.py  deepseek_neural.py  llama_neural.py
neural_splines/utils/: __init__.py  geometric_validation.py  spline_interpolation.py  tensor_ops.py
neural_splines/visualization/: spline_plots.py
src/: export_to_executorch.py  inference.py  inference_executorch.py  neural_spline.py  run_inference.cpp  train.py
